Issue #35: DIP-23 Настройка CommentMapper с маппингом полей
1. Из-за конфликта имен в импортах `DTO Comment` переименовано в `CommentDto`. `Entity Comment` остается "чистой". Рикошетом обновился `CommentController`, `Comments` и `openapi.yaml` из-за `CommentDto`, никаких других изменений в API и OpenAPI нет.
2. Настроена политика игнорирования полей
3. `NullValuePropertyMappingStrategy.IGNORE` в методе `updateCommentFromDto` проигнорирует пустые (не переданные) поля и заапдейтит только то что передано.
4. Явно игнорируются `pk`, `createdAt`, `author`, `id` - эти поля не должны изменяться при обновлении текста.
5. Дата создания хранится в БД как `TIMESTAMP`(LocalDateTime), пользователю отдается как `Long` (в миллисекундах). Преобразование через вспомогательный метод.
