# src/main/java/ru/skypro/homework/dto/comment/Comments.java
@@ -14,5 +14,5 @@ public class Comments {
     private Integer count;
 
     @Schema(description = "Список комментариев")
-    private List<Comment> results;
+    private List<CommentDto> results;
 }
